--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,14 @@ jobs:
       - name: "Composer install"
         run: composer install --no-interaction --no-progress   
           
-      # Runs a single command using the runners shell
-      - name: LS
-        run: ls
+     # Install Symfony CLI
+      - name: Symfony CLI
+        run: |
+          curl -sS https://get.symfony.com/cli/installer | bash
+          mv /home/runner/.symfony/bin/symfony /usr/local/bin/symfony
+          
+      # Check vulnerabilities
+      - name: Symfony Check Vulnerabilities
+        run: symfony check:security
+
 
