:NEW: Ajout PHP CS Fixer

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,9 @@ jobs:
       - name: Symfony Check Vulnerabilities
         run: symfony check:security
 
+        # PHP CS FIXER
+      - name: PHP-CS-Fixer
+        run: |
+          composer require friendsofphp/php-cs-fixer
+          ./vendor/bin/php-cs-fixer fix --dry-run
 
