--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
       - name: Symfony Check Vulnerabilities
         run: symfony check:security
 
-        # PHP CS FIXER
+      # PHP CS FIXER
       - name: PHP-CS-Fixer
         run: |
           composer require friendsofphp/php-cs-fixer
           ./vendor/bin/php-cs-fixer fix --dry-run
         
-        # PHP STAN
+      # PHP STAN
       - name: PHP Stan
         run: |
           ./vendor/bin/simple-phpunit install
@@ -56,3 +56,16 @@ jobs:
           composer require phpstan/extension-installer
           composer require phpstan/phpstan-symfony
           ./vendor/bin/phpstan analyse src --memory-limit 1G
+
+      # Linters Symfony
+      - name: Lint YAML files
+        run: ./bin/console lint:yaml config --parse-tags
+        
+      - name: Lint Twig templates
+        run: ./bin/console lint:twig templates --env=prod
+        
+      - name: Lint Parameters and Services
+        run: ./bin/console lint:container --no-debug
+        
+      - name: Lint Doctrine entities
+        run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
