--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,3 +73,7 @@ jobs:
         
       - name: Lint Doctrine entities
         run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
+
+      # Add PHP Unit
+      - name: PHP Unit
+        run: ./bin/phpunit
