--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,11 @@ jobs:
         
       - name: Lint Doctrine entities
         run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
-
+        
+      # Change permission phpunit
+      - name: Give permission on ./bin/phpunit
+        run: chmod +x bin/phpunit
+        
       # Add PHP Unit
       - name: PHP Unit
         run: ./bin/phpunit
